SQuirreL SQL Client Change Log
==============================

Not yet released - available from SVN or in the latest snapshot:
----------------------------------------------------------------

Enhancements:

New way to view query results: There is an new tab inside a query result named "Overview".
It might need some trying out to understand what it does.  


Incorporated patch which provides a node in the object tree called LOB which lists all LOBs, providing 
details about each (Thanks to Bogdan Cristian Paulon) 


Bug-fixes:

RSyntax: Turned off drag and drop inside the editor. It conflicted with our
drag and drop feature for files and caused editor texts to vanish. See bug #3006515. 

RSyntax: When code reformatting was used on Windows, carriage return chars (\r) where inserted in the editor.
These chars made keyboard arrow keys fail: If you stepped over an \r the key hit did nothing.


2991971: RSyntax text editor ignores font settings
2992443: Cannot use RSyntax or Netbeans editors

Parser could be triggered far to often which resulted in high CPU and memory load.
This problem was caused by redundant carriage return chars (\r).

Any redundant carriage return chars (\r) are removed from files.
On Win Platforms carriage return line feeds (\r\n) are kept for new lines.

3.1.1 (4/24/2010)
================

Enhancements:

Code completion Plugin:
 - Users may choose to see column remarks in completion lists.
   See Menu File --> New Session Properties --> Code Completion --> Checkbox an bottom of panel

Hibernate Plugin:
  - Results of HQL Queries can be displayed as objects
  - Hibernate logs can be seen in SQuirreL logs when Hibernate logging is configured for console output.


Bug-Fixes:

2991709: Quotes missing in squirrel-sql.bat
2990527: nChar() is unknown field
2982594 / 2988387: RSyntax editor crash
When database errors occured while loading table columns, SQuirreL slowed down and produced a lot of log messages.