@@ -94,6 +94,9 @@ public class SessionPropertiesBeanInfo extends SimpleBeanInfo
 						new PropertyDescriptor(IPropNames.TABLE_CONTENTS_OUTPUT_CLASS_NAME,
 							SessionProperties.class, "getTableContentsOutputClassName",
 							"setTableContentsOutputClassName"),
+						new PropertyDescriptor(IPropNames.KEEP_TABLE_LAYOUT_ON_RERUN,
+							SessionProperties.class, "getKeepTableLayoutOnRerun",
+							"setKeepTableLayoutOnRerun"),
 						new PropertyDescriptor(IPropNames.ABORT_ON_ERROR, SessionProperties.class,
 							"getAbortOnError", "setAbortOnError"),
 						new PropertyDescriptor(IPropNames.SQL_RESULT_TAB_LIMIT, SessionProperties.class,
